mdapipkg/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Active_for_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows Product Bundle to use inactive products</description>
        <label>Active for Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Connected_Id__c</fullName>
        <externalId>true</externalId>
        <label>Connected Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Connection_Name__c</fullName>
        <label>Connection Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The true for the record Bundle Product.</inlineHelpText>
        <label>Product Bundle</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Bundle</fullName>
        <active>true</active>
        <label>Product Bundle</label>
    </recordTypes>
</CustomObject>